coreos_k8s_setup/host/etc_iptables-persist_rules.v4
# Generated by iptables-save v1.4.21 on Tue Nov 10 19:16:24 2015
*filter
:INPUT ACCEPT [154:10716]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [84:10408]
COMMIT
# Completed on Tue Nov 10 19:16:24 2015
# Generated by iptables-save v1.4.21 on Tue Nov 10 19:16:24 2015
*nat
:PREROUTING ACCEPT [19115:1216574]
:INPUT ACCEPT [10039:669198]
:OUTPUT ACCEPT [140:11763]
:POSTROUTING ACCEPT [8851:536106]
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.100.201
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22201 -j DNAT --to-destination 192.168.100.201:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22202 -j DNAT --to-destination 192.168.100.202:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22203 -j DNAT --to-destination 192.168.100.203:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22204 -j DNAT --to-destination 192.168.100.204:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22205 -j DNAT --to-destination 192.168.100.205:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22206 -j DNAT --to-destination 192.168.100.206:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22207 -j DNAT --to-destination 192.168.100.207:22
-A PREROUTING -s 192.168.1.0/24 -p tcp -m tcp --dport 22208 -j DNAT --to-destination 192.168.100.208:22
-A POSTROUTING -s 192.168.100.0/24 -o em1 -j MASQUERADE
COMMIT
# Completed on Tue Nov 10 19:16:24 2015
